--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,28 +14,18 @@
     <string name="password">Password</string>
     <string name="nome">Nome</string>
     <string name="sign_in">SIGN IN</string>
-    <string name="register">REGISTER</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="resgistro_ok">Dados Gravados com Sucesso!</string>
     <string name="button_ok">OK</string>
-    <string name="descricao_veiculo">Descricao Veículo</string>
-    <string name="descricao">Descrição</string>
     <string name="marca_modelo_veiculo">Marca / Modelo - Veículo</string>
     <string name="descrico_do_veiculo">Descrição do Veículo</string>
     <string name="novo_usuario">Novo usuário</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="selecione_uma_imagem">Selecione uma imagem</string>
     <string name="voltar">VOLTAR</string>
-    <string name="new_car_for_rent">New Car for Rent</string>
-    <string name="sign_out">Sign Out</string>
     <string name="chassi_example">CHASSI: 9BWHE21JX24060960</string>
     <string name="imagem_do_veiculo">Imagem do Veiculo</string>
     <string name="excluir">Excluir</string>
-    <string name="delete">Delete</string>
-    <string name="select_all">Select all</string>
-    <string name="new_auto">* New</string>
-    <string name="delete_itens">Delete Itens..</string>
     <string name="loca_autos">LOCA AUTOS</string>
     <string name="lista_de_ve_culos_dispon_veis">Lista de Veículos Disponíveis</string>
     <string name="desc_loca_autos">
@@ -46,5 +36,11 @@
         Estamos aqui somente como um facilitador, portanto, aproveitem e consultem nossa lista abaixo:
     </string>
     <string name="sair">SAIR</string>
+    <string name="new_car_for_rent">Novo *</string>
+    <string name="sign_out">SAIR</string>
+    <string name="delete_itens">EXCLUIR ITENS</string>
+    <string name="delete">DELETE</string>
+    <string name="pagina_principal">Pagina Principal</string>
+    <string name="app_name_by_jussa">Loca Autos... by Jussa</string>
 
 </resources>
