--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="delete_itens">Delete Itens..</string>
     <string name="loca_autos" translatable="false">LOCA AUTOS</string>
     <string name="lista_de_ve_culos_dispon_veis">List of Available Vehicles</string>
-    <string name="desc_loca_autos">"Este aplicativo lhe mostrará uma lista de veiculos que estao disponíveis para locação. Independente da operadora, lhes mostraremos o título do veículo e uma descrição que constará o local/região e dados de contato da empresa locadora. Não nos responsabilizamos por nenhum dos acordos firmados entre o cliente e o locadores, assim como não nos responsabilizamos por danos de qualquer natureza. Estamos aqui somente como um facilitador, portanto, aproveitem e consultem nossa lista abaixo:"</string>
+    <string name="desc_loca_autos">This app will show you a list of vehicles that are available for rental. Regardless of the operator, we will show you the vehicle title and a description that will include the location/region and contact details of the rental company. We are not responsible for any of the agreements signed between the client and the lessor, nor are we responsible for damages of any nature. We are only here as a facilitator, so take advantage and check out our list below:</string>
     <string name="sair">Go Out</string>
     <string name="pagina_principal">Início</string>
     <string name="app_name_by_jussa" translatable="false">Loca Autos... by Jussa</string>
