--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -38,4 +38,9 @@
     <string name="developers">Desenvolvedores:</string>
     <string name="desc_loca_autos">Este aplicativo lhe mostrará uma lista de veiculos que estao disponíveis para locação. Independente da operadora, lhes mostraremos o título do veículo e uma descrição que constará o local/região e dados de contato da empresa locadora. Não nos responsabilizamos por nenhum dos acordos firmados entre o cliente e o locadores, assim como não nos responsabilizamos por danos de qualquer natureza. Estamos aqui somente como um facilitador, portanto, aproveitem e consultem nossa lista abaixo:</string>
     <string name="about">Sobre</string>
+    <string name="message_sucess">Dados Gravados com Sucesso!</string>
+    <string name="message_record_user_sucess">Usuário criado com Sucesso!</string>
+    <string name="message_user_input_email">Por Favor, insira um e-mail !</string>
+    <string name="message_user_input_valid_email">Por Favor, insira um e-mail válido! \n</string>
+    <string name="message_user_input_password">Por Favor, insira uma senha!</string>
 </resources>
